# mc-diag-boat

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: colab_app.ipynb  mc_diag_boat.ipynb  pattern_generator.py  schematic_generator.py  script_app.py  test.py
mc_diag_boat/: __init__.py  angle.py  angle_finder.py  boat_angle.py  constants.py  input.py  optimization.py  pattern.py  report.py  reporting.py  schematic.py  types.py  vec2.py
